(4.3.85) 2015/12/02 Released by Harlan Stenn <stenn@ntp.org>
Below are from 4.2.8p5:
* [Bug 2829] Look at pipe_fds in ntpd.c  (did so. perlinger@ntp.org)
* [Bug 2887] stratum -1 config results as showing value 99
  - fudge stratum only accepts values [0..16]. perlinger@ntp.org
* [Bug 2944] errno is not preserved properly in ntpdate after sendto call.
  - applied patch by Christos Zoulas.  perlinger@ntp.org
* [Bug 2967] ntpdate command suffers an assertion failure
  - fixed ntp_rfc2553.c to return proper address length. perlinger@ntp.org
* [Bug 2971] ntpq bails on ^C: select fails: Interrupted system call
  - changed stacked/nested handling of CTRL-C. perlinger@ntp.org
(4.3.84) 2015/11/26 Released by Harlan Stenn <stenn@ntp.org>
Below are from 4.2.8p5:
* Libevent autoconf pthread fixes for FreeBSD-10.  Harlan Stenn.
(4.3.83) 2015/11/25 Released by Harlan Stenn <stenn@ntp.org>
Below are from 4.2.8p5:
* Unity test cleanup.  Harlan Stenn.
(4.3.82) 2015/11/23 Released by Harlan Stenn <stenn@ntp.org>
Below are from 4.2.8p5:
* CID 1339955: Free allocated memory in caljulian test.  HStenn.
* CID 1339962: Explicitly initialize variable in caljulian test.  HStenn.
(4.3.81) 2015/11/21 Released by Harlan Stenn <stenn@ntp.org>
Below are from 4.2.8p5:
* Unity test cleanup.  Harlan Stenn.
(4.3.80) 2015/11/20 Released by Harlan Stenn <stenn@ntp.org>
Below are from 4.2.8p5:
* [Bug 2958] ntpq: fatal error messages need a final newline. Craig Leres.
* [Bug 2969]  Seg fault from ntpq/mrulist when looking at server with
              lots of clients. perlinger@ntp.org
* Unity test cleanup.  Harlan Stenn.
(4.3.79) 2015/11/17 Released by Harlan Stenn <stenn@ntp.org>
Below are from 4.2.8p5:
* [Bug 2932] Update leapsecond file info in miscopt.html.  CWoodbury, HStenn.
* [Bug 2957] 'unsigned int' vs 'size_t' format clash. perlinger@ntp.org
  - accept key file only if there are no parsing errors
  - fixed size_t/u_int format clash
  - fixed wrong use of 'strlcpy'